# adlap_tool_control

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
How to's /: ROS HOW TO.txt
config/: circular_params.yaml  gearbox_params.yaml  sinusoidal_params.yaml  tool_params.yaml
include/adlap_tool_control/: adlap_gearbox.hpp  instrument_controller.hpp  keyboard_reader.hpp  motor_controller.hpp  serial_port.hpp
launch/: circular_trajectory_node.launch.py  controllers_launch.py  left.launch.py  right.launch.py  sinusoidal.launch.py  tool_controller_node.launch.py
notebooks/: angle_conversion_plot.ipynb
scripts/: gearbox_digital_twin.py  gearbox_state_node.py  plot_trial.py  setup_test_runner_node.py  tool_reader_node.py
src/: adlap_gearbox.cpp  circular_trajectory_node.cpp  instrument_controller.cpp  keyboard_reader.cpp  manual_adjustment.cpp  motor_controller.cpp  motor_thread.cpp  node.cpp  serial_port.cpp  sinusoidal_controller.cpp  tool_controller.cpp  tool_controller_node.cpp
test/: angle_conversion_export.cpp  joint_angle_conversion_export.cpp  motor_controller_stub.cpp  test_angle_conversion.cpp
